// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard > should render Leaderboard excluding the podium 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          4
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="row"
      >
        <span>
          WhiskerFox
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        14118
      </span>
    </div>
    <div
      class="column"
    >
      <div
        class="position"
      >
        <span>
          5
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="row"
      >
        <span>
          JollyNimbus
        </span>
      </div>
    </div>
    <div
      class="column"
    >
      <span
        class="score"
      >
        13463
      </span>
    </div>
  </div>
</div>
`;

exports[`Leaderboard > should render Leaderboard including the podium 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          1
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <div
        class="row"
      >
        <span>
          ShadowCyborg
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        18456
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          2
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <div
        class="row"
      >
        <span>
          Radar
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        18398
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          3
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <div
        class="row"
      >
        <span>
          ShadowWhirlwind
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        15492
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          4
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <div
        class="row"
      >
        <span>
          WhiskerFox
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        14118
      </span>
    </div>
    <div
      class="column podium"
    >
      <div
        class="position"
      >
        <span>
          5
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <div
        class="row"
      >
        <span>
          JollyNimbus
        </span>
      </div>
    </div>
    <div
      class="column podium"
    >
      <span
        class="score"
      >
        13463
      </span>
    </div>
  </div>
</div>
`;
